--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 server.port=8085
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/MyBookShopApp
+spring.datasource.username=postgres
+spring.datasource.password=123321
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath*:schema.sql
+spring.sql.init.data-locations=classpath*:data.sql
