--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath*:schema.sql
 spring.sql.init.data-locations=classpath*:data.sql
+
+
+spring.messages.basename=lang.messages
