--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,19 @@
 server.port=8085
-spring.datasource.url=jdbc:postgresql://localhost:5432/MyBookShopApp
-spring.datasource.username=postgres
-spring.datasource.password=123321
-
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database=postgresql
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath*:schema.sql
-spring.sql.init.data-locations=classpath*:data.sql
-
-
-spring.messages.basename=lang.messages
 
 spring.resources.static-locations=classpath:/spring-frontend/
 spring.thymeleaf.prefix=classpath:/spring-frontend/
+
+spring.messages.basename=lang.messages
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/MyBookShopApp
+spring.datasource.username=postgres
+spring.datasource.password=123321
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
+#spring.sql.init.mode=always
+#spring.sql.init.data-locations=classpath:data.sql
+spring.datasource.initialization-mode=always
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
