--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,15 @@ spring.datasource.username=postgres
 spring.datasource.password=123321
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
-#spring.sql.init.mode=always
+
+
 #spring.sql.init.data-locations=classpath:data.sql
-spring.datasource.initialization-mode=always
+#spring.sql.init.mode=always
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+
+
+
+#spring.datasource.initialization-mode=always
