--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/MyBookShopApp
 spring.datasource.username=postgres
 spring.datasource.password=123321
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database=postgresql
+#spring.datasource.data=classpath:data.sql
+#spring.datasource.initialization-mode=always
 
-
-#spring.sql.init.data-locations=classpath:data.sql
-#spring.sql.init.mode=always
-
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-
-
-
-#spring.datasource.initialization-mode=always
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/db/changelog/liquibase-outputChangeLog_init.xml
