--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/MyBookShopApp
 spring.datasource.username=postgres
 spring.datasource.password=123321
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.data=classpath:data.sql
+#spring.datasource.data=classpath*:data.sql
 #spring.datasource.initialization-mode=always
 
 spring.jpa.hibernate.ddl-auto=none
