--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.datasource.username=postgres
 spring.datasource.password=123321
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.data=classpath*:data.sql
-#spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.liquibase.enabled=true
