--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 server.port=8085
-
 spring.resources.static-locations=classpath:/spring-frontend/
 spring.thymeleaf.prefix=classpath:/spring-frontend/
-
 spring.messages.basename=lang.messages
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/MyBookShopApp
 spring.datasource.username=postgres
 spring.datasource.password=123321
@@ -12,6 +9,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.data=classpath*:data.sql
 spring.sql.init.mode=always
 
+spring.jpa.defer-datasource-initialization=true
+#spring:
+#jpa:
+#defer-datasource-initialization:true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
