--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/liquibase-outputChangeLog_init.xml
+
+
+upload.path=C:/workspace/Projects/MyBookShopApp/customImg
