--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
-#url=jdbc:postgresql://localhost:5432/MyBookShopApp
-#username=postgres
-#password=123321
-#driver=org.postgresql.Driver
-#outputChangeLogFile=src/main/resources/db/changelog/liquibase-outputChangeLog.xml
+url=jdbc:postgresql://localhost:5432/MyBookShopApp
+username=postgres
+password=123321
+driver=org.postgresql.Driver
+outputChangeLogFile=src/main/resources/db/changelog/liquibase-outputChangeLog.xml
