--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=postgres
 spring.datasource.password=123321
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.data=classpath*:data.sql
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 
 #spring.jpa.defer-datasource-initialization=true
 #spring:
