upload img for books

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,16 +7,16 @@ spring.datasource.username=postgres
 spring.datasource.password=123321
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.data=classpath*:data.sql
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 
-#spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=true
 #spring:
 #jpa:
 #defer-datasource-initialization:true
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 spring.liquibase.change-log=classpath:/db/changelog/liquibase-outputChangeLog_init.xml
 
 
