--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,4 @@ spring.liquibase.change-log=classpath:/db/changelog/liquibase-outputChangeLog_in
 
 
 upload.path=C:/workspace/Projects/MyBookShopApp/customImg
+download.path=C:/workspace/Projects/MyBookShopApp/book-files
