--- a/pom.xml
+++ b/pom.xml
@@ -88,8 +88,19 @@
             <artifactId>springfox-boot-starter</artifactId>
             <version>3.0.0</version>
         </dependency>
-    </dependencies>
 
+
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+
+
+
+    </dependencies>
     <build>
         <plugins>
 <!--            <plugin>-->
