--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,18 +7,24 @@ spring.datasource.username=postgres
 spring.datasource.password=123321
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.data=classpath*:data.sql
+
 spring.sql.init.mode=always
 
-spring.jpa.defer-datasource-initialization=true
 #spring:
 #jpa:
 #defer-datasource-initialization:true
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.liquibase.enabled=false
 spring.liquibase.change-log=classpath:/db/changelog/liquibase-outputChangeLog_init.xml
 
 
 upload.path=C:/workspace/Projects/MyBookShopApp/customImg
 download.path=C:/workspace/Projects/MyBookShopApp/book-files
+
+
+
+spring.security.user.name=admin
+spring.security.user.password=admin
