--- a/pom.xml
+++ b/pom.xml
@@ -97,8 +97,16 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>2.7.3</version>
         </dependency>
-
-
+        <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
 
     </dependencies>
     <build>
