feat: authorization via google account and github

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,20 @@ spring.security.user.password=admin
 
 auth.secret=skillbox
 server.servlet.session.tracking-modes=cookie
+
+
+spring.security.oauth2.client.registration.google.client-id=178972011970-ogu6ko9gtvk1dr4vspdlcjv10nf2cg4b.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.github.client-id=92ec14519dd9016144ae
+spring.security.oauth2.client.registration.github.client-secret=534f8cda57a844f4330537da5eace662068b672a
+#spring.security.oauth2.client.registration.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
+#spring.security.oauth2.client.registration.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
+#spring.security.oauth2.client.registration.clientAuthenticationScheme=form
+#spring.security.oauth2.client.registration.scope=openid,email,profile
+#spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=https://www.googleapis.com/oauth2/v3/userinfo
+#spring.security.oauth2.resource.preferTokenInfo=true
+
+
+#spring.security.oauth2.client.registration.facebook.client-id=1719053674921973
+#spring.security.oauth2.client.registration.facebook.client-secret=840cdac1f9ce0296638a6979339256ac
+#uPrU4VYwxK4mpk9BH8KP
