--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,16 +35,18 @@ server.servlet.session.tracking-modes=cookie
 
 spring.security.oauth2.client.registration.google.client-id=178972011970-ogu6ko9gtvk1dr4vspdlcjv10nf2cg4b.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid, profile, email, address, phone
 spring.security.oauth2.client.registration.github.client-id=92ec14519dd9016144ae
 spring.security.oauth2.client.registration.github.client-secret=534f8cda57a844f4330537da5eace662068b672a
-#spring.security.oauth2.client.registration.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
-#spring.security.oauth2.client.registration.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
-#spring.security.oauth2.client.registration.clientAuthenticationScheme=form
-#spring.security.oauth2.client.registration.scope=openid,email,profile
-#spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=https://www.googleapis.com/oauth2/v3/userinfo
-#spring.security.oauth2.resource.preferTokenInfo=true
+#spring.security.oauth2.client.registration.vk.client-id=51419724
+#spring.security.oauth2.client.registration.vk.client-secret=u40KdMZSBMCjWXTtlnnU
+#spring.security.oauth2.client.registration.vk.redirect_uri=http://localhost:8085/my
+#spring.security.oauth2.client.registration.vk.display=popup
+#spring.security.oauth2.client.registration.vk.response_type=token
+#spring.security.oauth2.client.provider.vk.token-uri=https://oauth.vk.com/access_token
+#spring.security.oauth2.client.provider.vk.authorization-uri=https://oauth.vk.com/authorize
+#spring.security.oauth2.client.provider.vk.user-info-authentication-method=query
+#spring.security.oauth2.client.provider.vk.user-info-uri=https://api.vk.com/method/users.get?v=5.52
+#spring.security.oauth2.client.registration.vk.authorization-grant-type=code
+#spring.security.oauth2.client.registration.vk.redirect-uri=http://localhost:8085/my
 
-
-#spring.security.oauth2.client.registration.facebook.client-id=1719053674921973
-#spring.security.oauth2.client.registration.facebook.client-secret=840cdac1f9ce0296638a6979339256ac
-#uPrU4VYwxK4mpk9BH8KP
