--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,12 @@
             <artifactId>spring-security-oauth2-jose</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>4.2.20.RELEASE</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
