--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,14 @@
             <version>4.2.20.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
