feat: registration by send email code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ download.path=C:/workspace/Projects/MyBookShopApp/book-files
 spring.security.user.name=admin
 spring.security.user.password=admin
 
-auth.secret=skillbox
+auth.secret=nvnSecretKey
 server.servlet.session.tracking-modes=cookie
 
 
@@ -49,4 +49,14 @@ spring.security.oauth2.client.registration.github.client-secret=534f8cda57a844f4
 #spring.security.oauth2.client.provider.vk.user-info-uri=https://api.vk.com/method/users.get?v=5.52
 #spring.security.oauth2.client.registration.vk.authorization-grant-type=code
 #spring.security.oauth2.client.registration.vk.redirect-uri=http://localhost:8085/my
+
+
+sms.ru.API_ID=A75D4032-B278-8A54-5F87-E288C64DAD44
+
+
+appEmail.email=mybook.shopapp@bk.ru
+appEmail.password=1dpPqyJPvCG3Md731728
+
+
+
 
