feat: working with google books api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.sql.init.mode=never
 #jpa:
 #defer-datasource-initialization:true
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
 spring.liquibase.enabled=false
@@ -57,6 +57,9 @@ sms.ru.API_ID=A75D4032-B278-8A54-5F87-E288C64DAD44
 appEmail.email=mybook.shopapp@bk.ru
 appEmail.password=1dpPqyJPvCG3Md731728
 
+google.books.api.key=AIzaSyBrA7_pSzvRLmKRiQAOmcVQlzexgK-iS0A
 
 
 
+management.endpoint.health.show-details=always
+management.endpoints.jmx.exposure.include=*
