--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.datasource.password=123321
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.data=classpath*:data.sql
 
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 
 #spring:
 #jpa:
 #defer-datasource-initialization:true
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
 spring.liquibase.enabled=false
