--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,12 @@
 <!--                    <propertyFile>src/main/resources/liquibase.properties</propertyFile>-->
 <!--                </configuration>-->
 <!--            </plugin>-->
+
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.4.0.905</version>
+                </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
